test/data/fail/statements/directive.js
/*
// acorn fails
'\1'
'use strict'
*/
'\1'
'use strict';
//<>
''
'\2'
'use strict'
